<resources>
    <string name="app_name">ResearchPOC</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="exposure">EXPOSURE</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="white_balance">WHITE BALANCE</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="chromatic_mode">Chromatic</string>
    <string name="distortion_mode">Distortion</string>
    <string name="edge_mode">Edge</string>
    <string name="hot_pixel_mode">Hot pixel</string>
    <string name="jpeg_quality_mode">JPEG Quality</string>
    <string name="stabilisation_mode">Stabilisation</string>
    <string name="noise_mode">Noise</string>
    <string name="tone_mapping_mode">Tone mapping</string>
    <string name="down">v</string>
</resources>